--- a/index.ipynb
+++ b/index.ipynb
@@ -28,8 +28,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -52,11 +54,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_df = None"
+    "raw_df = pd.read_json('News_Category_Dataset_v2.json',lines=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>authors</th>\n",
+       "      <th>category</th>\n",
+       "      <th>date</th>\n",
+       "      <th>headline</th>\n",
+       "      <th>link</th>\n",
+       "      <th>short_description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Melissa Jeltsen</td>\n",
+       "      <td>CRIME</td>\n",
+       "      <td>2018-05-26</td>\n",
+       "      <td>There Were 2 Mass Shootings In Texas Last Week...</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/texas-ama...</td>\n",
+       "      <td>She left her husband. He killed their children...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Andy McDonald</td>\n",
+       "      <td>ENTERTAINMENT</td>\n",
+       "      <td>2018-05-26</td>\n",
+       "      <td>Will Smith Joins Diplo And Nicky Jam For The 2...</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/will-smit...</td>\n",
+       "      <td>Of course it has a song.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ron Dicker</td>\n",
+       "      <td>ENTERTAINMENT</td>\n",
+       "      <td>2018-05-26</td>\n",
+       "      <td>Hugh Grant Marries For The First Time At Age 57</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/hugh-gran...</td>\n",
+       "      <td>The actor and his longtime girlfriend Anna Ebe...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Ron Dicker</td>\n",
+       "      <td>ENTERTAINMENT</td>\n",
+       "      <td>2018-05-26</td>\n",
+       "      <td>Jim Carrey Blasts 'Castrato' Adam Schiff And D...</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/jim-carre...</td>\n",
+       "      <td>The actor gives Dems an ass-kicking for not fi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Ron Dicker</td>\n",
+       "      <td>ENTERTAINMENT</td>\n",
+       "      <td>2018-05-26</td>\n",
+       "      <td>Julianna Margulies Uses Donald Trump Poop Bags...</td>\n",
+       "      <td>https://www.huffingtonpost.com/entry/julianna-...</td>\n",
+       "      <td>The \"Dietland\" actress said using the bags is ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           authors       category       date  \\\n",
+       "0  Melissa Jeltsen          CRIME 2018-05-26   \n",
+       "1    Andy McDonald  ENTERTAINMENT 2018-05-26   \n",
+       "2       Ron Dicker  ENTERTAINMENT 2018-05-26   \n",
+       "3       Ron Dicker  ENTERTAINMENT 2018-05-26   \n",
+       "4       Ron Dicker  ENTERTAINMENT 2018-05-26   \n",
+       "\n",
+       "                                            headline  \\\n",
+       "0  There Were 2 Mass Shootings In Texas Last Week...   \n",
+       "1  Will Smith Joins Diplo And Nicky Jam For The 2...   \n",
+       "2    Hugh Grant Marries For The First Time At Age 57   \n",
+       "3  Jim Carrey Blasts 'Castrato' Adam Schiff And D...   \n",
+       "4  Julianna Margulies Uses Donald Trump Poop Bags...   \n",
+       "\n",
+       "                                                link  \\\n",
+       "0  https://www.huffingtonpost.com/entry/texas-ama...   \n",
+       "1  https://www.huffingtonpost.com/entry/will-smit...   \n",
+       "2  https://www.huffingtonpost.com/entry/hugh-gran...   \n",
+       "3  https://www.huffingtonpost.com/entry/jim-carre...   \n",
+       "4  https://www.huffingtonpost.com/entry/julianna-...   \n",
+       "\n",
+       "                                   short_description  \n",
+       "0  She left her husband. He killed their children...  \n",
+       "1                           Of course it has a song.  \n",
+       "2  The actor and his longtime girlfriend Anna Ebe...  \n",
+       "3  The actor gives Dems an ass-kicking for not fi...  \n",
+       "4  The \"Dietland\" actress said using the bags is ...  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(200853, 6)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_df.shape"
    ]
   },
   {
@@ -75,12 +220,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['combined_text'] = None\n",
-    "data = None"
+    "raw_df['combined_text'] = raw_df.headline+str(' ')+raw_df.short_description\n",
+    "data = raw_df.combined_text.map(word_tokenize)"
    ]
   },
   {
@@ -92,9 +237,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    [There, Were, 2, Mass, Shootings, In, Texas, L...\n",
+       "1    [Will, Smith, Joins, Diplo, And, Nicky, Jam, F...\n",
+       "2    [Hugh, Grant, Marries, For, The, First, Time, ...\n",
+       "3    [Jim, Carrey, Blasts, 'Castrato, ', Adam, Schi...\n",
+       "4    [Julianna, Margulies, Uses, Donald, Trump, Poo...\n",
+       "Name: combined_text, dtype: object"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data[:5]"
    ]
@@ -125,11 +286,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = None"
+    "model = Word2Vec(data, size=100, window=5, min_count=1, workers=4)"
    ]
   },
   {
@@ -148,10 +309,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(55563497, 67352790)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.train(data, total_examples = model.corpus_count, epochs=10)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -162,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,10 +358,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Louisiana', 0.837503969669342),\n",
+       " ('Pennsylvania', 0.8320128917694092),\n",
+       " ('Georgia', 0.8112715482711792),\n",
+       " ('Oregon', 0.807198166847229),\n",
+       " ('Illinois', 0.8060603141784668),\n",
+       " ('Massachusetts', 0.8001177310943604),\n",
+       " ('Ohio', 0.7948039770126343),\n",
+       " ('Oklahoma', 0.7919467687606812),\n",
+       " ('Maryland', 0.7898613810539246),\n",
+       " ('Arkansas', 0.7734816670417786)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wv.most_similar('Texas')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -202,10 +398,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Parent/Grandparent', 0.44554224610328674),\n",
+       " ('Admon', 0.3997495472431183),\n",
+       " ('much-vaunted', 0.3960561156272888),\n",
+       " ('entreat', 0.39454710483551025),\n",
+       " ('Likened', 0.39326727390289307),\n",
+       " ('petrifying', 0.37924009561538696),\n",
+       " ('uh-oh', 0.36502861976623535),\n",
+       " ('are—great', 0.35416126251220703),\n",
+       " ('Harjant', 0.3466959297657013),\n",
+       " ('Anti-Assad', 0.3455319404602051)]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wv.most_similar(negative='Texas')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -220,10 +438,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 3.85017246e-01, -6.09153450e-01, -6.13516092e-01, -1.03984624e-01,\n",
+       "        5.47805130e-01, -1.52999461e+00, -7.03374505e-01,  2.82338023e+00,\n",
+       "       -1.49688244e+00,  1.33014739e+00, -3.52560133e-02, -1.17227209e+00,\n",
+       "       -2.74333405e+00, -1.79491431e-01,  8.59801531e-01,  8.78345847e-01,\n",
+       "       -7.99724281e-01,  5.41334212e-01,  6.14042759e-01,  7.49677658e-01,\n",
+       "       -2.39040518e+00, -1.97096837e+00,  1.83483946e+00,  1.60614789e+00,\n",
+       "       -6.10201240e-01, -1.19136786e+00, -1.30043817e+00,  1.48656821e+00,\n",
+       "        6.40314937e-01,  1.42051077e+00, -1.15347362e+00,  1.07282698e-01,\n",
+       "        1.28495693e+00, -6.30133152e-01,  1.88369524e+00, -1.54872072e+00,\n",
+       "        2.04617071e+00, -7.18769968e-01, -6.47797644e-01,  2.05901885e+00,\n",
+       "        2.71047926e+00, -1.66730797e+00, -8.04283798e-01, -9.20544982e-01,\n",
+       "       -2.86078763e+00,  9.93451893e-01,  7.58361399e-01,  1.53644657e+00,\n",
+       "        6.96863208e-06, -1.98933864e+00, -1.42322135e+00, -4.42214668e-01,\n",
+       "       -2.15220952e+00,  6.26778826e-02, -6.65006042e-01, -9.38790917e-01,\n",
+       "       -2.29757935e-01,  2.31177640e+00,  2.57688053e-02, -9.30323899e-01,\n",
+       "        1.88224328e+00,  2.71638155e+00, -8.41344520e-02, -3.30566049e-01,\n",
+       "       -1.96970320e+00,  1.30642700e+00, -1.75084278e-01, -1.16970444e+00,\n",
+       "        4.91296202e-01,  9.41041529e-01, -2.01424766e+00,  8.94255400e-01,\n",
+       "        2.64907062e-01, -7.34509751e-02, -1.33346713e+00,  3.06585506e-02,\n",
+       "       -3.84822786e-01,  2.03954391e-02,  2.74531817e+00, -1.15114546e+00,\n",
+       "        1.39973354e+00, -1.64131343e+00,  1.61751196e-01,  9.64808524e-01,\n",
+       "       -7.90758550e-01, -1.22307050e+00, -6.36364341e-01, -5.48318684e-01,\n",
+       "        1.05146039e+00,  9.16738689e-01,  3.13202858e-01,  2.26820540e+00,\n",
+       "        2.73232818e+00, -1.57113683e+00, -3.57634187e-01,  6.21073902e-01,\n",
+       "        7.93778718e-01, -1.08128011e+00,  1.57023919e+00, -1.53357044e-01],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wv['Texas']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -234,10 +490,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.1782397 , -0.9178503 ,  0.1948584 , ..., -2.5716136 ,\n",
+       "         0.6963111 , -0.00608444],\n",
+       "       [-1.185741  ,  0.32695308, -0.66236097, ..., -2.7193577 ,\n",
+       "         0.30630216,  1.9320294 ],\n",
+       "       [ 0.74135715,  0.17879501, -1.345428  , ..., -0.9151147 ,\n",
+       "         1.0447632 ,  1.3173102 ],\n",
+       "       ...,\n",
+       "       [ 0.00309686, -0.02977571, -0.04359864, ..., -0.08926757,\n",
+       "        -0.03752616, -0.09305115],\n",
+       "       [ 0.04916708, -0.05679752, -0.01266283, ..., -0.11013402,\n",
+       "         0.03090267,  0.02680703],\n",
+       "       [-0.06751227,  0.04360333, -0.02306423, ..., -0.07407458,\n",
+       "         0.0096357 , -0.03012247]], dtype=float32)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wv.vectors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "154100"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(wv.vectors)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -250,10 +551,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('brunette', 0.6604349613189697),\n",
+       " ('princess', 0.6277649402618408),\n",
+       " ('queen', 0.6154391169548035),\n",
+       " ('revival', 0.6117390394210815),\n",
+       " ('perfume', 0.6065945625305176),\n",
+       " ('villain', 0.5909569263458252),\n",
+       " ('Queen', 0.5894035696983337),\n",
+       " ('title', 0.5870229005813599),\n",
+       " ('reminiscent', 0.5830579996109009),\n",
+       " ('lipstick', 0.5828072428703308)]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wv.most_similar(positive=['king','woman'],negative=['man'])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -285,7 +608,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
